exports[`default-param-last > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 24
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 39
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 23
        },
        "end": {
          "line": 1,
          "column": 28
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    },
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 21
        },
        "end": {
          "line": 1,
          "column": 26
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    },
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 32
        },
        "end": {
          "line": 1,
          "column": 37
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 24
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 25
        },
        "end": {
          "line": 1,
          "column": 35
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    },
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 21
        },
        "end": {
          "line": 1,
          "column": 31
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`default-param-last > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "default-param-last",
      "messageId": "shouldBeLast",
      "message": "Default parameters should be last.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 14
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;
